# pinochle_python

./: .gitignore  README.md  bidding.py  cards.py  main.py  passing_cards.py  pinochle_game.py  play_tricks.py  pyproject.toml  requirements.txt  scoring.py  trick.py  utils.py
pinochle/: bidding.py  cards.py  passing_cards.py  pinochle_game.py  play_tricks.py  scoring.py  trick.py  utils.py
tests/: conftest.py  test_bidding.py  test_cards.py  test_passing_cards.py  test_pinochle_game.py  test_play_tricks.py  test_scoring.py  test_trick.py
tests/pinochle/: test_bidding.py  test_cards.py  test_passing_cards.py  test_pinochle_game.py  test_play_tricks.py  test_scoring.py  test_trick.py
