[tool.poetry]
name = "pinochle"
version = "0.1.0"
description = ""
authors = ["Philip Vegdahl <pvegdahl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^0.931"
fastapi = "^0.76.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "^7.0.1"
ipython = "^8.0.1"
mutmut = "^2.4.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

